--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,7 @@
 </head>
 <body class="container">
 
-<script>
-</script>
+<%-include nav%>
 
 <% if(typeof alert != 'undefined') { %>
     <% alert.forEach(function(error) { %>
