--- a/views/update.ejs
+++ b/views/update.ejs
@@ -4,20 +4,20 @@
     <% include css %>
 </head>
 <body class="container">
-
+<%-include nav%>
 <form  method="post" action="/update-sv" enctype="application/x-www-form-urlencoded">
     <div class="row" style="width: 600px">
         <p style="font-size: 20px">Id</p>
-        <input hidden  name="_id" value="<%=_id%>">
-        <input id="id" name="id" placeholder="Enter id" value="<%=id%>">
+        <input hidden  name="_id" value="<%=locals._id ? _id:''%>">
+        <input id="id" name="id" value="<%=locals.id ? id:''%>"  placeholder="Enter id">
         <p style="font-size: 20px;margin-top: 10px">Email</p>
-        <input id="email" name="email" placeholder="Enter email" value="<%=email%>">
+        <input id="email" name="email" value="<%=locals.email ? email:''%>"  placeholder="Enter email">
         <p style="font-size: 20px;margin-top: 10px">Address</p>
-        <input id="address" name="address" placeholder="Enter address" value="<%=address%>">
+        <input id="address" name="address" value="<%=locals.address ? address:''%>" placeholder="Enter address">
         <p style="font-size: 20px;margin-top: 10px">Key</p>
-        <input id="key" name="key" placeholder="Enter key" value="<%=key%>">
+        <input id="key" type="number" name="key" value="<%=locals.key ? key:''%>" placeholder="Enter key">
         <p style="font-size: 20px;margin-top: 10px">Date</p>
-        <input id="date" name="date" placeholder="Enter date" value="<%=date%>">
+        <input id="date" type="date" name="date" value="<%=locals.date ? date:''%>" placeholder="Enter date">
         <button style="margin-top: 20px" type="submit">Update</button>
     </div>
 </form>
