add validate new

--- a/views/update.ejs
+++ b/views/update.ejs
@@ -9,7 +9,7 @@
     <div class="row" style="width: 600px">
         <p style="font-size: 20px">Id</p>
         <input hidden  name="_id" value="<%=locals._id ? _id:''%>">
-        <input id="id" name="id" value="<%=locals.id ? id:''%>"  placeholder="Enter id">
+        <input id="id" disabled name="id" value="<%=locals.id ? id:''%>"  placeholder="Enter id">
         <p style="font-size: 20px;margin-top: 10px">Email</p>
         <input id="email" name="email" value="<%=locals.email ? email:''%>"  placeholder="Enter email">
         <p style="font-size: 20px;margin-top: 10px">Address</p>
