--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,11 +5,11 @@
 </head>
 <body class="container">
 <%-include nav%>
-<form method="post" action="/find"
-      enctype="application/x-www-form-urlencoded">
-    <input type="search" name="ids" placeholder="find">
-    <button style="width: 70px" type="submit">Search</button>
-</form>
+<!--<form method="post" action="/find"-->
+<!--      enctype="application/x-www-form-urlencoded">-->
+<!--    <input type="search" name="ids" placeholder="find">-->
+<!--    <button style="width: 70px" type="submit">Search</button>-->
+<!--</form>-->
 
 <h1><%=locals.mss ? mss:''%></h1>
 
